--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -277,25 +277,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set has 300 samples.\n",
+      "Testing set has 95 samples.\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Import any additional functionality you may need here\n",
+    "from sklearn.cross_validation import train_test_split\n",
     "\n",
     "# TODO: Set the number of training points\n",
-    "num_train = None\n",
+    "num_train = 300\n",
     "\n",
     "# Set the number of testing points\n",
     "num_test = X_all.shape[0] - num_train\n",
     "\n",
     "# TODO: Shuffle and split the dataset into the number of training and testing points above\n",
-    "X_train = None\n",
-    "X_test = None\n",
-    "y_train = None\n",
-    "y_test = None\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_all, y_all, test_size=num_test, random_state=42)\n",
     "\n",
     "# Show the results of the split\n",
     "print \"Training set has {} samples.\".format(X_train.shape[0])\n",
