Updated model application

--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -342,7 +342,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "TODO: Complete, clean up and review\n",
+    "\n",
+    "**Decision Trees** / Random Forest\n",
+    "- *Real-world application:* \n",
+    "- *Strengths:* DTs are easy to interpret and explain an outcome.\n",
+    "- *Weaknesses:*\n",
+    "- *Good candidate:*\n",
+    "\n",
+    "**K-Nearest Neighbours**\n",
+    "- *Real-world application:* Medical research and diagnosis, e.g. pattern recognition for cancer cells\n",
+    "- *Strengths:* kNN is simple to implement, a non-parametric and makes no asumption about the distribution of the data. Also, computational performance is good with a limited number of dimensions/features.\n",
+    "- *Weaknesses:* kNN has a performance of O(n^2) which means it can easily fall victim from the curse of dimensionality. Additionally, kNN treats all attributes with the same importance, i.e. individual attributes/features are each given the same weight\n",
+    "- *Good candidate:* There is no reason to believe individual features are weighted differently, limited number of featuers reduces computational tasks, ...\n",
+    "\n",
+    "References:\n",
+    "\n",
+    "- https://www.researchgate.net/publication/270163293_Application_of_k-Nearest_Neighbour_Classification_in_Medical_Data_Mining\n",
+    "- http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2243774/\n",
+    "- http://www.sciencedirect.com/science/article/pii/S2211812815003156\n",
+    "\n",
+    "\n",
+    "**SVM / NB**\n",
+    "- *Real-world application:*\n",
+    "- *Strengths:*\n",
+    "- *Weaknesses:*\n",
+    "- *Good candidate:*"
    ]
   },
   {
@@ -359,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -439,13 +466,13 @@
     "clf_C = None\n",
     "\n",
     "# TODO: Set up the training set sizes\n",
-    "X_train_100 = None\n",
+    "X_train_100 = None # use X_train up to row 100\n",
     "y_train_100 = None\n",
     "\n",
-    "X_train_200 = None\n",
+    "X_train_200 = None # upto 200\n",
     "y_train_200 = None\n",
     "\n",
-    "X_train_300 = None\n",
+    "X_train_300 = None # all of X_train\n",
     "y_train_300 = None\n",
     "\n",
     "# TODO: Execute the 'train_predict' function for each classifier and each training set size\n",
