Update model application

--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -346,16 +346,31 @@
     "\n",
     "TODO: Complete, clean up and review\n",
     "\n",
-    "**Decision Trees** / Random Forest\n",
+    "**Random Forest (Decision Trees)** / \n",
     "- *Real-world application:* \n",
-    "- *Strengths:* DTs are easy to interpret and explain an outcome.\n",
+    "- *Strengths:* \n",
+    "    - DTs are easy to interpret and implement\n",
+    "    - They are non-parametric so there is no need to determine if data is linearly separable\n",
+    "    - DTs work well for both classification and regression problems\n",
+    "    - RF uses the average of all DTs outcomes as its results\n",
     "- *Weaknesses:*\n",
+    "    - Adds complexity to an otherwise simple DT\n",
     "- *Good candidate:*\n",
+    "\n",
+    "References:\n",
+    "- (scroll down) http://what-when-how.com/artificial-intelligence/decision-tree-applications-for-data-modelling-artificial-intelligence/ \n",
+    "- http://www.investopedia.com/articles/financial-theory/11/decisions-trees-finance.asp\n",
     "\n",
     "**K-Nearest Neighbours**\n",
     "- *Real-world application:* Medical research and diagnosis, e.g. pattern recognition for cancer cells\n",
-    "- *Strengths:* kNN is simple to implement, a non-parametric and makes no asumption about the distribution of the data. Also, computational performance is good with a limited number of dimensions/features.\n",
-    "- *Weaknesses:* kNN has a performance of O(n^2) which means it can easily fall victim from the curse of dimensionality. Additionally, kNN treats all attributes with the same importance, i.e. individual attributes/features are each given the same weight\n",
+    "- *Strengths:* \n",
+    "    - kNN is simple to implement\n",
+    "    - It's a non-parametric and makes no asumption about the distribution of the data\n",
+    "    - Computational performance is good with a limited number of dimensions/features.\n",
+    "- *Weaknesses:* \n",
+    "    - kNN has a performance of O(n^2) which means it can easily fall victim from the curse of dimensionality. \n",
+    "    - kNN treats all attributes with the same importance, i.e. individual attributes/features are each given the same weight\n",
+    "    - It's also tends to be slow during predictions as it doesn't learn from training but references data during testing\n",
     "- *Good candidate:* There is no reason to believe individual features are weighted differently, limited number of featuers reduces computational tasks, ...\n",
     "\n",
     "References:\n",
@@ -365,11 +380,17 @@
     "- http://www.sciencedirect.com/science/article/pii/S2211812815003156\n",
     "\n",
     "\n",
-    "**SVM / NB**\n",
+    "**SVM**\n",
     "- *Real-world application:*\n",
     "- *Strengths:*\n",
+    "    - SVM is capabable of handling both classification and regression problems\n",
+    "    - works well with limited labeled data\n",
+    "    - Can take advantage of linear and non-linear kernals\n",
     "- *Weaknesses:*\n",
-    "- *Good candidate:*"
+    "    - Complex data transformation\n",
+    "    - More time taken due to complex data transformation\n",
+    "    - SVM tend to be black boxes, explaining what and why of an outcome is hard\n",
+    "- *Good candidate:* The data could be either linear or non-linear and SVM can handle both scenarios. This model can also capture complex relationships within the data\n"
    ]
   },
   {
