Completed random forest test

--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -470,55 +470,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training a RandomForestClassifier using a training set size of 100. . .\n",
+      "Trained model in 0.0310 seconds\n",
+      "Made predictions in 0.0012 seconds.\n",
+      "F1 score for training set: 0.9844.\n",
+      "Made predictions in 0.0029 seconds.\n",
+      "F1 score for test set: 0.7153.\n",
+      "Training a RandomForestClassifier using a training set size of 200. . .\n",
+      "Trained model in 0.0285 seconds\n",
+      "Made predictions in 0.0019 seconds.\n",
+      "F1 score for training set: 0.9964.\n",
+      "Made predictions in 0.0018 seconds.\n",
+      "F1 score for test set: 0.7857.\n",
+      "Training a RandomForestClassifier using a training set size of 300. . .\n",
+      "Trained model in 0.0304 seconds\n",
+      "Made predictions in 0.0034 seconds.\n",
+      "F1 score for training set: 0.9951.\n",
+      "Made predictions in 0.0053 seconds.\n",
+      "F1 score for test set: 0.8092.\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Import the three supervised learning models from sklearn\n",
-    "# from sklearn import model_A\n",
-    "# from sklearn import model_B\n",
-    "# from skearln import model_C\n",
+    "# Import the three supervised learning models from sklearn\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "# TODO: Initialize the three models\n",
-    "clf_A = None\n",
-    "clf_B = None\n",
-    "clf_C = None\n",
+    "# Initialize random_state\n",
+    "rand_state = 42\n",
     "\n",
-    "# TODO: Set up the training set sizes\n",
-    "X_train_100 = None # use X_train up to row 100\n",
-    "y_train_100 = None\n",
+    "# Initialize the three models\n",
+    "clf_A = RandomForestClassifier(random_state=rand_state)\n",
+    "clf_B = SVC(random_state=rand_state)\n",
+    "clf_C = KNeighborsClassifier()\n",
     "\n",
-    "X_train_200 = None # upto 200\n",
-    "y_train_200 = None\n",
+    "# Set up the training set sizes\n",
+    "X_train_100 = X_train[:100]\n",
+    "y_train_100 = y_train[:100]\n",
     "\n",
-    "X_train_300 = None # all of X_train\n",
-    "y_train_300 = None\n",
+    "X_train_200 = X_train[:200]\n",
+    "y_train_200 = y_train[:200]\n",
     "\n",
-    "# TODO: Execute the 'train_predict' function for each classifier and each training set size\n",
-    "# train_predict(clf, X_train, y_train, X_test, y_test)"
+    "X_train_300 = X_train\n",
+    "y_train_300 = y_train\n",
+    "\n",
+    "# Execute the 'train_predict' function for each classifier and each training set size\n",
+    "train_predict(clf_A, X_train_100, y_train_100, X_test, y_test)\n",
+    "train_predict(clf_A, X_train_200, y_train_200, X_test, y_test)\n",
+    "train_predict(clf_A, X_train_300, y_train_300, X_test, y_test)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tabular Results\n",
-    "Edit the cell below to see how a table can be designed in [Markdown](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet#tables). You can record your results from above in the tables provided."
+    "### Tabular Results"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Classifer 1 - ?**  \n",
+    "** Classifer 1 - Random Forest**  \n",
     "\n",
-    "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
+    "| Training Set Size | Training Time           | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |                         |                        |                  |                 |\n",
-    "| 200               |        EXAMPLE          |                        |                  |                 |\n",
-    "| 300               |                         |                        |                  |    EXAMPLE      |\n",
+    "| 100               | 0.0310                  | 0.0029                 | 0.9844           | 0.7153          |\n",
+    "| 200               | 0.0285                  | 0.0018                 | 0.9964           | 0.7857          |\n",
+    "| 300               | 0.0304                  | 0.0053                 | 0.9951           | 0.8092          |\n",
     "\n",
     "** Classifer 2 - ?**  \n",
     "\n",
