Completed svm test

--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -479,24 +479,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training a RandomForestClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0310 seconds\n",
-      "Made predictions in 0.0012 seconds.\n",
-      "F1 score for training set: 0.9844.\n",
-      "Made predictions in 0.0029 seconds.\n",
-      "F1 score for test set: 0.7153.\n",
-      "Training a RandomForestClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0285 seconds\n",
-      "Made predictions in 0.0019 seconds.\n",
-      "F1 score for training set: 0.9964.\n",
+      "Training a SVC using a training set size of 100. . .\n",
+      "Trained model in 0.0017 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 0.8777.\n",
+      "Made predictions in 0.0009 seconds.\n",
+      "F1 score for test set: 0.7746.\n",
+      "---\n",
+      "Training a SVC using a training set size of 200. . .\n",
+      "Trained model in 0.0032 seconds\n",
+      "Made predictions in 0.0026 seconds.\n",
+      "F1 score for training set: 0.8679.\n",
+      "Made predictions in 0.0024 seconds.\n",
+      "F1 score for test set: 0.7815.\n",
+      "---\n",
+      "Training a SVC using a training set size of 300. . .\n",
+      "Trained model in 0.0099 seconds\n",
+      "Made predictions in 0.0070 seconds.\n",
+      "F1 score for training set: 0.8761.\n",
       "Made predictions in 0.0018 seconds.\n",
-      "F1 score for test set: 0.7857.\n",
-      "Training a RandomForestClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0304 seconds\n",
-      "Made predictions in 0.0034 seconds.\n",
-      "F1 score for training set: 0.9951.\n",
-      "Made predictions in 0.0053 seconds.\n",
-      "F1 score for test set: 0.8092.\n"
+      "F1 score for test set: 0.7838.\n"
      ]
     }
    ],
@@ -525,9 +527,11 @@
     "y_train_300 = y_train\n",
     "\n",
     "# Execute the 'train_predict' function for each classifier and each training set size\n",
-    "train_predict(clf_A, X_train_100, y_train_100, X_test, y_test)\n",
-    "train_predict(clf_A, X_train_200, y_train_200, X_test, y_test)\n",
-    "train_predict(clf_A, X_train_300, y_train_300, X_test, y_test)"
+    "train_predict(clf_B, X_train_100, y_train_100, X_test, y_test)\n",
+    "print('---')\n",
+    "train_predict(clf_B, X_train_200, y_train_200, X_test, y_test)\n",
+    "print('---')\n",
+    "train_predict(clf_B, X_train_300, y_train_300, X_test, y_test)"
    ]
   },
   {
@@ -549,13 +553,13 @@
     "| 200               | 0.0285                  | 0.0018                 | 0.9964           | 0.7857          |\n",
     "| 300               | 0.0304                  | 0.0053                 | 0.9951           | 0.8092          |\n",
     "\n",
-    "** Classifer 2 - ?**  \n",
+    "** Classifer 2 - SVC**  \n",
     "\n",
-    "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
+    "| Training Set Size | Training Time           | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |                         |                        |                  |                 |\n",
-    "| 200               |     EXAMPLE             |                        |                  |                 |\n",
-    "| 300               |                         |                        |                  |     EXAMPLE     |\n",
+    "| 100               | 0.0017                  | 0.0009                 | 0.8777           | 0.7746          |\n",
+    "| 200               | 0.0032                  | 0.0024                 | 0.8679           | 0.7815          |\n",
+    "| 300               | 0.0099                  | 0.0018                 | 0.8761           | 0.7838          |\n",
     "\n",
     "** Classifer 3 - ?**  \n",
     "\n",
