Completed knn test

--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -479,26 +479,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training a SVC using a training set size of 100. . .\n",
-      "Trained model in 0.0017 seconds\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for training set: 0.8777.\n",
-      "Made predictions in 0.0009 seconds.\n",
-      "F1 score for test set: 0.7746.\n",
-      "---\n",
-      "Training a SVC using a training set size of 200. . .\n",
-      "Trained model in 0.0032 seconds\n",
-      "Made predictions in 0.0026 seconds.\n",
-      "F1 score for training set: 0.8679.\n",
-      "Made predictions in 0.0024 seconds.\n",
-      "F1 score for test set: 0.7815.\n",
-      "---\n",
-      "Training a SVC using a training set size of 300. . .\n",
-      "Trained model in 0.0099 seconds\n",
-      "Made predictions in 0.0070 seconds.\n",
-      "F1 score for training set: 0.8761.\n",
+      "Training a KNeighborsClassifier using a training set size of 100. . .\n",
+      "Trained model in 0.0008 seconds\n",
       "Made predictions in 0.0018 seconds.\n",
-      "F1 score for test set: 0.7838.\n"
+      "F1 score for training set: 0.8060.\n",
+      "Made predictions in 0.0014 seconds.\n",
+      "F1 score for test set: 0.7246.\n",
+      "---\n",
+      "Training a KNeighborsClassifier using a training set size of 200. . .\n",
+      "Trained model in 0.0006 seconds\n",
+      "Made predictions in 0.0031 seconds.\n",
+      "F1 score for training set: 0.8800.\n",
+      "Made predictions in 0.0029 seconds.\n",
+      "F1 score for test set: 0.7692.\n",
+      "---\n",
+      "Training a KNeighborsClassifier using a training set size of 300. . .\n",
+      "Trained model in 0.0019 seconds\n",
+      "Made predictions in 0.0109 seconds.\n",
+      "F1 score for training set: 0.8809.\n",
+      "Made predictions in 0.0040 seconds.\n",
+      "F1 score for test set: 0.7801.\n"
      ]
     }
    ],
@@ -527,11 +527,11 @@
     "y_train_300 = y_train\n",
     "\n",
     "# Execute the 'train_predict' function for each classifier and each training set size\n",
-    "train_predict(clf_B, X_train_100, y_train_100, X_test, y_test)\n",
+    "train_predict(clf_C, X_train_100, y_train_100, X_test, y_test)\n",
     "print('---')\n",
-    "train_predict(clf_B, X_train_200, y_train_200, X_test, y_test)\n",
+    "train_predict(clf_C, X_train_200, y_train_200, X_test, y_test)\n",
     "print('---')\n",
-    "train_predict(clf_B, X_train_300, y_train_300, X_test, y_test)"
+    "train_predict(clf_C, X_train_300, y_train_300, X_test, y_test)"
    ]
   },
   {
@@ -563,11 +563,11 @@
     "\n",
     "** Classifer 3 - ?**  \n",
     "\n",
-    "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
+    "| Training Set Size | Training Time           | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |                         |                        |                  |                 |\n",
-    "| 200               |                         |                        |                  |                 |\n",
-    "| 300               |                         |                        |                  |                 |"
+    "| 100               | 0.0008                  | 0.0014                 | 0.8060           | 0.7246          |\n",
+    "| 200               | 0.0006                  | 0.0029                 | 0.8800           | 0.7692          |\n",
+    "| 300               | 0.0019                  | 0.0040                 | 0.8809           | 0.7801          |"
    ]
   },
   {
