--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -107,19 +107,19 @@
     }
    ],
    "source": [
-    "# TODO: Calculate number of students\n",
+    "# Calculate number of students\n",
     "n_students = len(student_data.index)\n",
     "\n",
-    "# TODO: Calculate number of features\n",
+    "# Calculate number of features\n",
     "n_features = student_data.shape[1]\n",
     "\n",
-    "# TODO: Calculate passing students\n",
+    "# Calculate passing students\n",
     "n_passed = len(student_data[student_data['passed'] == 'yes'])\n",
     "\n",
-    "# TODO: Calculate failing students\n",
+    "# Calculate failing students\n",
     "n_failed = n_students - n_passed\n",
     "\n",
-    "# TODO: Calculate graduation rate\n",
+    "# Calculate graduation rate\n",
     "grad_rate = (n_passed / float(n_students)) * 100\n",
     "\n",
     "# Print the results\n",
@@ -292,16 +292,16 @@
     }
    ],
    "source": [
-    "# TODO: Import any additional functionality you may need here\n",
+    "# Import any additional functionality you may need here\n",
     "from sklearn.cross_validation import train_test_split\n",
     "\n",
-    "# TODO: Set the number of training points\n",
+    "# Set the number of training points\n",
     "num_train = 300\n",
     "\n",
     "# Set the number of testing points\n",
     "num_test = X_all.shape[0] - num_train\n",
     "\n",
-    "# TODO: Shuffle and split the dataset into the number of training and testing points above\n",
+    "# Shuffle and split the dataset into the number of training and testing points above\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_all, y_all, test_size=num_test, random_state=42)\n",
     "\n",
     "# Show the results of the split\n",
@@ -349,7 +349,7 @@
     "**Random Forest (Decision Trees)** / \n",
     "- *Real-world application:* \n",
     "- *Strengths:* \n",
-    "    - DTs are easy to interpret and implement\n",
+    "    - DTs are easy to implement and interpret outcomes\n",
     "    - They are non-parametric so there is no need to determine if data is linearly separable\n",
     "    - DTs work well for both classification and regression problems\n",
     "    - RF uses the average of all DTs outcomes as its results\n",
@@ -561,7 +561,7 @@
     "| 200               | 0.0032                  | 0.0024                 | 0.8679           | 0.7815          |\n",
     "| 300               | 0.0099                  | 0.0018                 | 0.8761           | 0.7838          |\n",
     "\n",
-    "** Classifer 3 - ?**  \n",
+    "** Classifer 3 - kNN**  \n",
     "\n",
     "| Training Set Size | Training Time           | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
@@ -590,7 +590,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "Random Forest or SVM -> probably RF. Easily scalable, best accuracy \"out-of-box\", prediction times are not grossly exaggerated in comparison, easily understood and implemented "
    ]
   },
   {
@@ -605,7 +607,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "Start with a tree, then the forest and averaging out results"
    ]
   },
   {
@@ -626,28 +630,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Made predictions in 0.0017 seconds.\n",
+      "Tuned model has a training F1 score of 0.9831.\n",
+      "Made predictions in 0.0009 seconds.\n",
+      "Tuned model has a testing F1 score of 0.8271.\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Import 'GridSearchCV' and 'make_scorer'\n",
+    "# Import 'GridSearchCV' and 'make_scorer'\n",
+    "from sklearn.grid_search import GridSearchCV\n",
+    "from sklearn.metrics import f1_score, make_scorer\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "# TODO: Create the parameters list you wish to tune\n",
-    "parameters = None\n",
+    "# Create the parameters list you wish to tune\n",
+    "parameters = {'n_estimators': range(5,10)}\n",
     "\n",
-    "# TODO: Initialize the classifier\n",
-    "clf = None\n",
+    "# Initialize the classifier\n",
+    "clf = RandomForestClassifier(random_state=42)\n",
     "\n",
-    "# TODO: Make an f1 scoring function using 'make_scorer' \n",
-    "f1_scorer = None\n",
+    "# Make an f1 scoring function using 'make_scorer' \n",
+    "f1_scorer = make_scorer(f1_score, pos_label='yes')\n",
     "\n",
-    "# TODO: Perform grid search on the classifier using the f1_scorer as the scoring method\n",
-    "grid_obj = None\n",
+    "# Perform grid search on the classifier using the f1_scorer as the scoring method\n",
+    "grid_obj = GridSearchCV(clf, param_grid=parameters, scoring=f1_scorer)\n",
     "\n",
-    "# TODO: Fit the grid search object to the training data and find the optimal parameters\n",
-    "grid_obj = None\n",
+    "# Fit the grid search object to the training data and find the optimal parameters\n",
+    "grid_obj = grid_obj.fit(X_train, y_train)\n",
     "\n",
     "# Get the estimator\n",
     "clf = grid_obj.best_estimator_\n",
