--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false
    },
@@ -639,9 +639,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0017 seconds.\n",
+      "Made predictions in 0.0012 seconds.\n",
       "Tuned model has a training F1 score of 0.9831.\n",
-      "Made predictions in 0.0009 seconds.\n",
+      "Made predictions in 0.0008 seconds.\n",
       "Tuned model has a testing F1 score of 0.8271.\n"
      ]
     }
@@ -653,7 +653,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# Create the parameters list you wish to tune\n",
-    "parameters = {'n_estimators': range(5,10)}\n",
+    "parameters = {'n_estimators': [9,10,11], 'max_features': ['log2', 'auto']}\n",
     "\n",
     "# Initialize the classifier\n",
     "clf = RandomForestClassifier(random_state=42)\n",
@@ -687,7 +687,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "- Made predictions in 0.0012 seconds.\n",
+    "- Tuned model has a training F1 score of 0.9831.\n",
+    "- Made predictions in 0.0008 seconds.\n",
+    "- Tuned model has a testing F1 score of 0.8271."
    ]
   },
   {
