--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "This is a classification supervised learning problem. \n",
     "\n",
-    "Classification problems typically take an input and map it to an output set of discrete labels, in this case, true/false or requires intervention vs. does not require intervention. In contrast, regression supervised learning problems map inputs to an output of continuous values."
+    "Classification problems typically take an input and map it to an output set of discrete labels, in this case, true/false or requires intervention vs. does not require intervention. We will train the model using the feature 'Passed' (yes/no) as our target value and then predict this value with new data. In contrast, regression supervised learning problems map inputs to an output of continuous real values."
    ]
   },
   {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -480,24 +480,24 @@
      "output_type": "stream",
      "text": [
       "Training a KNeighborsClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0008 seconds\n",
-      "Made predictions in 0.0018 seconds.\n",
+      "Trained model in 0.0039 seconds\n",
+      "Made predictions in 0.0050 seconds.\n",
       "F1 score for training set: 0.8060.\n",
-      "Made predictions in 0.0014 seconds.\n",
+      "Made predictions in 0.0025 seconds.\n",
       "F1 score for test set: 0.7246.\n",
       "---\n",
       "Training a KNeighborsClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0006 seconds\n",
-      "Made predictions in 0.0031 seconds.\n",
+      "Trained model in 0.0011 seconds\n",
+      "Made predictions in 0.0027 seconds.\n",
       "F1 score for training set: 0.8800.\n",
-      "Made predictions in 0.0029 seconds.\n",
+      "Made predictions in 0.0017 seconds.\n",
       "F1 score for test set: 0.7692.\n",
       "---\n",
       "Training a KNeighborsClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0019 seconds\n",
-      "Made predictions in 0.0109 seconds.\n",
+      "Trained model in 0.0007 seconds\n",
+      "Made predictions in 0.0073 seconds.\n",
       "F1 score for training set: 0.8809.\n",
-      "Made predictions in 0.0040 seconds.\n",
+      "Made predictions in 0.0026 seconds.\n",
       "F1 score for test set: 0.7801.\n"
      ]
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -639,9 +639,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0012 seconds.\n",
+      "Made predictions in 0.0017 seconds.\n",
       "Tuned model has a training F1 score of 0.9831.\n",
-      "Made predictions in 0.0008 seconds.\n",
+      "Made predictions in 0.0015 seconds.\n",
       "Tuned model has a testing F1 score of 0.8271.\n"
      ]
     }
@@ -705,8 +705,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -720,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
