--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -344,25 +344,28 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "TODO: Complete, clean up and review\n",
     "\n",
     "**Random Forest (Decision Trees)** / \n",
     "- *Real-world application:* \n",
+    "    - In sports, from predicting player positions on a basketball court to betting on a winning team, can be accomplished as a Random forest model in predictive analytics for sports. \n",
     "- *Strengths:* \n",
-    "    - DTs are easy to implement and interpret outcomes\n",
+    "    - Random Forests (RF) and Decision Trees (DT) are versatile, easy to implement and easy to interpret outcomes\n",
     "    - They are non-parametric so there is no need to determine if data is linearly separable\n",
     "    - DTs work well for both classification and regression problems\n",
-    "    - RF uses the average of all DTs outcomes as its results\n",
+    "    - RFs uses the average of all DT outcomes as its final result\n",
     "- *Weaknesses:*\n",
-    "    - Adds complexity to an otherwise simple DT\n",
-    "- *Good candidate:*\n",
+    "    - Adds some complexity to an otherwise simple DT\n",
+    "- *Good candidate:* \n",
+    "    - Decision trees tend to overfit and with limited data that would be a bigger problem when testing the model. By using a random forest, averaging the final results, this issue should be reduced. Also, given the type of data dimensions, i.e. health, guardian, romantic, etc, to determine is a student will pass or fail, it seems unlikely that the data will be linearly separable but since random forest can handle both scenarios, this makes the model a good candidate.\n",
     "\n",
     "References:\n",
-    "- (scroll down) http://what-when-how.com/artificial-intelligence/decision-tree-applications-for-data-modelling-artificial-intelligence/ \n",
-    "- http://www.investopedia.com/articles/financial-theory/11/decisions-trees-finance.asp\n",
+    "- https://www.disneyresearch.com/publication/detecting-and-tracking-sports-players-with-random-forests-and-context-conditioned-motion-models/\n",
+    "- https://arxiv.org/pdf/1310.3607.pdf\n",
+    "- http://www.simafore.com/blog/bid/112158/Predictive-analytics-in-cricket-from-decision-tree-to-random-forest\n",
     "\n",
     "**K-Nearest Neighbours**\n",
-    "- *Real-world application:* Medical research and diagnosis, e.g. pattern recognition for cancer cells\n",
+    "- *Real-world application:* \n",
+    "    - Medical research and diagnosis, e.g. pattern recognition for cancer cells\n",
     "- *Strengths:* \n",
     "    - kNN is simple to implement\n",
     "    - It's a non-parametric and makes no asumption about the distribution of the data\n",
@@ -370,8 +373,9 @@
     "- *Weaknesses:* \n",
     "    - kNN has a performance of O(n^2) which means it can easily fall victim from the curse of dimensionality. \n",
     "    - kNN treats all attributes with the same importance, i.e. individual attributes/features are each given the same weight\n",
-    "    - It's also tends to be slow during predictions as it doesn't learn from training but references data during testing\n",
-    "- *Good candidate:* There is no reason to believe individual features are weighted differently, limited number of featuers reduces computational tasks, ...\n",
+    "    - It's also tends to be slow during predictions as it doesn't learn from training but references data during testing / querying new data points\n",
+    "- *Good candidate:* \n",
+    "    - With the data provided we have no reason to believe individual features are weighted differently and the limited number of dimensions reduces computational tasks. Therefore, with the dataset provided, I think kNN is a good candidate particuarly as a reference baseline.\n",
     "\n",
     "References:\n",
     "\n",
@@ -381,16 +385,24 @@
     "\n",
     "\n",
     "**SVM**\n",
-    "- *Real-world application:*\n",
+    "- *Real-world application:* \n",
+    "    - Predictive maintenance or mechanical fault detection is a real world application where the SVM model can be applied. Use of the kernal trick is applied to predict complex relationships in mechinery monitoring and fault diagnosis.\n",
     "- *Strengths:*\n",
     "    - SVM is capabable of handling both classification and regression problems\n",
-    "    - works well with limited labeled data\n",
-    "    - Can take advantage of linear and non-linear kernals\n",
+    "    - Works well with limited labeled data\n",
+    "    - It does complex data transformations for you\n",
+    "    - Can take advantage of linear and non-linear kernals, or a custom build on domain knowledge\n",
     "- *Weaknesses:*\n",
-    "    - Complex data transformation\n",
-    "    - More time taken due to complex data transformation\n",
+    "    - It does complex data transformation for you (pro and con)\n",
     "    - SVM tend to be black boxes, explaining what and why of an outcome is hard\n",
-    "- *Good candidate:* The data could be either linear or non-linear and SVM can handle both scenarios. This model can also capture complex relationships within the data\n"
+    "- *Good candidate:* \n",
+    "    - Given the dataset it could be either linear or non-linearly seperable and SVM can handle both scenarios. This model can also capture very complex relationships within the data.\n",
+    "\n",
+    "References:\n",
+    "\n",
+    "- http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4279508/\n",
+    "- http://www.sciencedirect.com/science/article/pii/S0360544210003154\n",
+    "- http://www.sciencedirect.com/science/article/pii/S2090447915001306"
    ]
   },
   {
