--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -604,7 +604,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "Random Forest or SVM -> probably RF. Easily scalable, best accuracy \"out-of-box\", prediction times are not grossly exaggerated in comparison, easily understood and implemented "
+    "I've choosen the Random Forest model. Based on my previous experiements, the RF model gave the best results, but note that it also performed the worst in terms of time taken to make predictions. However, given its advantages in being easy to implement, tune and scale to accomdate large datasets, and the fact that its slower performance was not grossly exaggerated in comparison, I believe this is the best model to use."
    ]
   },
   {
@@ -621,7 +621,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "Start with a tree, then the forest and averaging out results"
+    "The random forest model is the averaged result of the outcome from multiple decision trees. A decision tree, asks the data multiple yes/no, true/false questions splitting up and breaking down the data until it can determine what the data is, i.e. until it can make a prediction. Hence, in the random forest model, we make multiple predictions and then use the average of those predictions as our final answer."
    ]
   },
   {
