--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -651,9 +651,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0017 seconds.\n",
+      "Made predictions in 0.0012 seconds.\n",
       "Tuned model has a training F1 score of 0.9831.\n",
-      "Made predictions in 0.0015 seconds.\n",
+      "Made predictions in 0.0014 seconds.\n",
       "Tuned model has a testing F1 score of 0.8271.\n"
      ]
     }
@@ -665,7 +665,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# Create the parameters list you wish to tune\n",
-    "parameters = {'n_estimators': [9,10,11], 'max_features': ['log2', 'auto']}\n",
+    "parameters = {'n_estimators': [8, 9, 10], 'max_features': ['log2', 'sqrt']}\n",
     "\n",
     "# Initialize the classifier\n",
     "clf = RandomForestClassifier(random_state=42)\n",
@@ -701,10 +701,14 @@
    "source": [
     "**Answer: **\n",
     "\n",
+    "Final F1 score: Training is 0.9831; Testing is 0.8271 \n",
+    "\n",
     "- Made predictions in 0.0012 seconds.\n",
     "- Tuned model has a training F1 score of 0.9831.\n",
-    "- Made predictions in 0.0008 seconds.\n",
-    "- Tuned model has a testing F1 score of 0.8271."
+    "- Made predictions in 0.0013 seconds.\n",
+    "- Tuned model has a testing F1 score of 0.8271.\n",
+    "\n",
+    "The tuned and untuned models are separated by < 0.02. The nature of the Random forest model means there are limited areas of tuning, in most cases this is advantageous. Here I've tuned two main areas, estimators (number of trees to use) and max features (max number of features each trees can use). A disadvantage of limited areas for tuning means that a F1 score of 0.8271 is probably close to the best value achievable given the dataset."
    ]
   },
   {
