--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -345,18 +345,19 @@
     "**Answer: **\n",
     "\n",
     "\n",
-    "**Random Forest (Decision Trees)** / \n",
+    "**Random Forest (Decision Trees)**\n",
     "- *Real-world application:* \n",
-    "    - In sports, from predicting player positions on a basketball court to betting on a winning team, can be accomplished as a Random forest model in predictive analytics for sports. \n",
+    "    - In sports, ranging from predicting player positions on a basketball court to betting on a winning team, can be accomplished with a random forest model the field of predictive analytics for sports. \n",
     "- *Strengths:* \n",
     "    - Random Forests (RF) and Decision Trees (DT) are versatile, easy to implement and easy to interpret outcomes\n",
     "    - They are non-parametric so there is no need to determine if data is linearly separable\n",
     "    - DTs work well for both classification and regression problems\n",
-    "    - RFs uses the average of all DT outcomes as its final result\n",
+    "    - RFs uses the average of all DT outcomes as its final result reducing the tendency of DTs to overfit datapoints\n",
     "- *Weaknesses:*\n",
     "    - Adds some complexity to an otherwise simple DT\n",
+    "    - Cannot map complex relationships as well as others, such as SVM with non-linear kernal\n",
     "- *Good candidate:* \n",
-    "    - Decision trees tend to overfit and with limited data that would be a bigger problem when testing the model. By using a random forest, averaging the final results, this issue should be reduced. Also, given the type of data dimensions, i.e. health, guardian, romantic, etc, to determine is a student will pass or fail, it seems unlikely that the data will be linearly separable but since random forest can handle both scenarios, this makes the model a good candidate.\n",
+    "    - Decision trees tend to overfit easily and with limited data, that would be a bigger problem when testing the model. By using a random forest, averaging the final results, this issue should be reduced while also gaining a greater accuracy via averaging results. Also, given the type of data dimensions, i.e. health, guardian, romantic, etc, to predict if a student will pass or fail, it seems unlikely that the data will be linearly separable but since random forest can handle both scenarios, this makes the model a good candidate.\n",
     "\n",
     "References:\n",
     "- https://www.disneyresearch.com/publication/detecting-and-tracking-sports-players-with-random-forests-and-context-conditioned-motion-models/\n",
@@ -367,15 +368,16 @@
     "- *Real-world application:* \n",
     "    - Medical research and diagnosis, e.g. pattern recognition for cancer cells\n",
     "- *Strengths:* \n",
-    "    - kNN is simple to implement\n",
+    "    - kNN is easy to understand\n",
     "    - It's a non-parametric and makes no asumption about the distribution of the data\n",
     "    - Computational performance is good with a limited number of dimensions/features.\n",
+    "    - If performance isn't an issue, kNN works better as it gains more data, i.e. large datasets\n",
     "- *Weaknesses:* \n",
     "    - kNN has a performance of O(n^2) which means it can easily fall victim from the curse of dimensionality. \n",
     "    - kNN treats all attributes with the same importance, i.e. individual attributes/features are each given the same weight\n",
-    "    - It's also tends to be slow during predictions as it doesn't learn from training but references data during testing / querying new data points\n",
+    "    - Tends to be slow during predictions as it doesn't learn from training but references training data during testing to predict outcome\n",
     "- *Good candidate:* \n",
-    "    - With the data provided we have no reason to believe individual features are weighted differently and the limited number of dimensions reduces computational tasks. Therefore, with the dataset provided, I think kNN is a good candidate particuarly as a reference baseline.\n",
+    "    - With the data provided, we have no reason to believe individual features are weighted differently and the limited number of dimensions reduces the computational task. Therefore, with the dataset provided, I think kNN is a good candidate particuarly as a baseline reference.\n",
     "\n",
     "References:\n",
     "\n",
@@ -391,12 +393,12 @@
     "    - SVM is capabable of handling both classification and regression problems\n",
     "    - Works well with limited labeled data\n",
     "    - It does complex data transformations for you\n",
-    "    - Can take advantage of linear and non-linear kernals, or a custom build on domain knowledge\n",
+    "    - Can take advantage of linear and non-linear kernals, or a custom kernal built on domain knowledge\n",
     "- *Weaknesses:*\n",
     "    - It does complex data transformation for you (pro and con)\n",
     "    - SVM tend to be black boxes, explaining what and why of an outcome is hard\n",
     "- *Good candidate:* \n",
-    "    - Given the dataset it could be either linear or non-linearly seperable and SVM can handle both scenarios. This model can also capture very complex relationships within the data.\n",
+    "    - Given the dataset, it is likely that there are complex relationships that may determine if a student requires intervention. These types of complex relationships are easily handled by SVM. The data can also be either linear or non-linearly seperable, both of which SVM is capable of.\n",
     "\n",
     "References:\n",
     "\n",
@@ -604,7 +606,7 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "I've choosen the Random Forest model. Based on my previous experiements, the RF model gave the best results, but note that it also performed the worst in terms of time taken to make predictions. However, given its advantages in being easy to implement, tune and scale to accomdate large datasets, and the fact that its slower performance was not grossly exaggerated in comparison, I believe this is the best model to use."
+    "I've choosen the Random Forest model. Based on my previous experiements, the RF model gave the best results, but note, it also performed the worst in terms of time taken to make predictions. However, given its advantages in being easy to implement, tune and scale to accomdate large datasets, and the fact that its slower performance was not grossly worse in comparison, I believe this is the best model to use."
    ]
   },
   {
@@ -701,14 +703,14 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "Final F1 score: Training is 0.9831; Testing is 0.8271 \n",
+    "Final F1 score: **Training is 0.9831** and **Testing is 0.8271** \n",
     "\n",
     "- Made predictions in 0.0012 seconds.\n",
     "- Tuned model has a training F1 score of 0.9831.\n",
     "- Made predictions in 0.0013 seconds.\n",
     "- Tuned model has a testing F1 score of 0.8271.\n",
     "\n",
-    "The tuned and untuned models are separated by < 0.02. The nature of the Random forest model means there are limited areas of tuning, in most cases this is advantageous. Here I've tuned two main areas, estimators (number of trees to use) and max features (max number of features each trees can use). A disadvantage of limited areas for tuning means that a F1 score of 0.8271 is probably close to the best value achievable given the dataset."
+    "The tuned and untuned models are separated by < 0.02. The nature of the random forest model means there are limited areas of tuning, in most cases this is advantageous. Here I've tuned two main areas, estimators (number of trees to use) and max features (max number of features each trees can use). A disadvantage of limited areas for tuning means that a F1 score of 0.8271 is probably close to the best value achievable given the dataset."
    ]
   },
   {
