--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
      "output_type": "stream",
      "text": [
       "Total number of students: 395\n",
-      "Number of features: 31\n",
+      "Number of features: 30\n",
       "Number of students who passed: 265\n",
       "Number of students who failed: 130\n",
       "Graduation rate of the class: 67.09%\n"
@@ -111,7 +111,7 @@
     "n_students = len(student_data.index)\n",
     "\n",
     "# Calculate number of features\n",
-    "n_features = student_data.shape[1]\n",
+    "n_features = len(student_data.columns[:-1])\n",
     "\n",
     "# Calculate passing students\n",
     "n_passed = len(student_data[student_data['passed'] == 'yes'])\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -287,7 +287,10 @@
      "output_type": "stream",
      "text": [
       "Training set has 300 samples.\n",
-      "Testing set has 95 samples.\n"
+      "Testing set has 95 samples.\n",
+      "---\n",
+      "Grad rate of train set: 67.00%\n",
+      "Grad rate of test set: 67.37%\n"
      ]
     }
    ],
@@ -302,11 +305,15 @@
     "num_test = X_all.shape[0] - num_train\n",
     "\n",
     "# Shuffle and split the dataset into the number of training and testing points above\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_all, y_all, test_size=num_test, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_all, y_all, stratify=y_all, test_size=num_test, random_state=42)\n",
     "\n",
     "# Show the results of the split\n",
     "print \"Training set has {} samples.\".format(X_train.shape[0])\n",
-    "print \"Testing set has {} samples.\".format(X_test.shape[0])"
+    "print \"Testing set has {} samples.\".format(X_test.shape[0])\n",
+    "print \"---\"\n",
+    "# Ensure training and test data both have similar proportions of \"yes\" and \"no\" labels using stratify=y_all\n",
+    "print \"Grad rate of train set: {:.2f}%\".format(100 * (y_train == 'yes').mean())\n",
+    "print \"Grad rate of test set: {:.2f}%\".format(100 * (y_test == 'yes').mean())"
    ]
   },
   {
@@ -421,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -484,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -493,26 +500,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "RandomForestClassifier: \n",
+      "\n",
+      "Training a RandomForestClassifier using a training set size of 100. . .\n",
+      "Trained model in 0.0321 seconds\n",
+      "Made predictions in 0.0016 seconds.\n",
+      "F1 score for training set: 0.9924.\n",
+      "Made predictions in 0.0017 seconds.\n",
+      "F1 score for test set: 0.7368.\n",
+      "Training a RandomForestClassifier using a training set size of 200. . .\n",
+      "Trained model in 0.0259 seconds\n",
+      "Made predictions in 0.0023 seconds.\n",
+      "F1 score for training set: 0.9885.\n",
+      "Made predictions in 0.0019 seconds.\n",
+      "F1 score for test set: 0.6822.\n",
+      "Training a RandomForestClassifier using a training set size of 300. . .\n",
+      "Trained model in 0.0354 seconds\n",
+      "Made predictions in 0.0015 seconds.\n",
+      "F1 score for training set: 0.9975.\n",
+      "Made predictions in 0.0011 seconds.\n",
+      "F1 score for test set: 0.7132.\n",
+      "\n",
+      "SVC: \n",
+      "\n",
+      "Training a SVC using a training set size of 100. . .\n",
+      "Trained model in 0.0018 seconds\n",
+      "Made predictions in 0.0013 seconds.\n",
+      "F1 score for training set: 0.8354.\n",
+      "Made predictions in 0.0013 seconds.\n",
+      "F1 score for test set: 0.8025.\n",
+      "Training a SVC using a training set size of 200. . .\n",
+      "Trained model in 0.0050 seconds\n",
+      "Made predictions in 0.0044 seconds.\n",
+      "F1 score for training set: 0.8431.\n",
+      "Made predictions in 0.0020 seconds.\n",
+      "F1 score for test set: 0.8105.\n",
+      "Training a SVC using a training set size of 300. . .\n",
+      "Trained model in 0.0094 seconds\n",
+      "Made predictions in 0.0097 seconds.\n",
+      "F1 score for training set: 0.8664.\n",
+      "Made predictions in 0.0028 seconds.\n",
+      "F1 score for test set: 0.8052.\n",
+      "\n",
+      "KNeighborsClassifier: \n",
+      "\n",
       "Training a KNeighborsClassifier using a training set size of 100. . .\n",
-      "Trained model in 0.0039 seconds\n",
-      "Made predictions in 0.0050 seconds.\n",
-      "F1 score for training set: 0.8060.\n",
-      "Made predictions in 0.0025 seconds.\n",
-      "F1 score for test set: 0.7246.\n",
-      "---\n",
+      "Trained model in 0.0007 seconds\n",
+      "Made predictions in 0.0021 seconds.\n",
+      "F1 score for training set: 0.8252.\n",
+      "Made predictions in 0.0021 seconds.\n",
+      "F1 score for test set: 0.7586.\n",
       "Training a KNeighborsClassifier using a training set size of 200. . .\n",
       "Trained model in 0.0011 seconds\n",
-      "Made predictions in 0.0027 seconds.\n",
-      "F1 score for training set: 0.8800.\n",
-      "Made predictions in 0.0017 seconds.\n",
-      "F1 score for test set: 0.7692.\n",
-      "---\n",
+      "Made predictions in 0.0045 seconds.\n",
+      "F1 score for training set: 0.8097.\n",
+      "Made predictions in 0.0025 seconds.\n",
+      "F1 score for test set: 0.7857.\n",
       "Training a KNeighborsClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0007 seconds\n",
-      "Made predictions in 0.0073 seconds.\n",
-      "F1 score for training set: 0.8809.\n",
-      "Made predictions in 0.0026 seconds.\n",
-      "F1 score for test set: 0.7801.\n"
+      "Trained model in 0.0013 seconds\n",
+      "Made predictions in 0.0092 seconds.\n",
+      "F1 score for training set: 0.8539.\n",
+      "Made predictions in 0.0039 seconds.\n",
+      "F1 score for test set: 0.8138.\n"
      ]
     }
    ],
@@ -540,12 +590,17 @@
     "X_train_300 = X_train\n",
     "y_train_300 = y_train\n",
     "\n",
-    "# Execute the 'train_predict' function for each classifier and each training set size\n",
-    "train_predict(clf_C, X_train_100, y_train_100, X_test, y_test)\n",
-    "print('---')\n",
-    "train_predict(clf_C, X_train_200, y_train_200, X_test, y_test)\n",
-    "print('---')\n",
-    "train_predict(clf_C, X_train_300, y_train_300, X_test, y_test)"
+    "# loop through models, then through train sizes\n",
+    "for clf in [clf_A, clf_B, clf_C]:\n",
+    "\n",
+    "    # show the estimator type\n",
+    "    print \"\\n{}: \\n\".format(clf.__class__.__name__)\n",
+    "\n",
+    "    # loop through training sizes\n",
+    "    for n in [100, 200, 300]:\n",
+    "\n",
+    "        # create training data from first 100, then 200, then 300 points\n",
+    "        train_predict(clf, X_train[:n], y_train[:n], X_test, y_test)"
    ]
   },
   {
@@ -644,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -653,10 +708,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0012 seconds.\n",
-      "Tuned model has a training F1 score of 0.9831.\n",
-      "Made predictions in 0.0014 seconds.\n",
-      "Tuned model has a testing F1 score of 0.8271.\n"
+      "Made predictions in 0.0013 seconds.\n",
+      "Tuned model has a training F1 score of 0.9950.\n",
+      "Made predictions in 0.0009 seconds.\n",
+      "Tuned model has a testing F1 score of 0.7746.\n"
      ]
     }
    ],
@@ -667,7 +722,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# Create the parameters list you wish to tune\n",
-    "parameters = {'n_estimators': [8, 9, 10], 'max_features': ['log2', 'sqrt']}\n",
+    "parameters = {'n_estimators': range(5,20), 'max_features': ['log2', 'sqrt']}\n",
     "\n",
     "# Initialize the classifier\n",
     "clf = RandomForestClassifier(random_state=42)\n",
@@ -725,7 +780,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -739,7 +794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
